--- a/challenge_2/client/index.html
+++ b/challenge_2/client/index.html
@@ -1,2 +1,21 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>CSV Generator</title>
+    <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+  </head>
+  
+  <body>
+    <form>
+      <textarea id="textBox" placeholder="JSON Object:"></textarea>
+      <textarea id="filter" placeholder="Filter By:"></textarea>
+      <input id="submitButton" type="submit">
+    </form>
 
+    <div id="cv" style="white-space: pre-line"></div>
+
+  </body>
+  <script src="app.js"></script>
+
+</html>
 
