--- a/challenge_3/public/index.html
+++ b/challenge_3/public/index.html
@@ -1,2 +1,19 @@
+<!DOCTYPE html>
+<html>
 
+  <head> 
+    <title> Shopping Cart </title>
+    <link rel="stylesheet" href="styles.css">
+  </head>
+
+  <body>
+    <p id="title">Shop Till You Drop<p>
+    <div id="app"></div>
+  </body>
+  <script src="react.development.js"></script>
+  <script src="react-dom.development.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.9.1/underscore.js"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+  <script src="app.js"></script>
+</html>
 
