--- a/challenge_4/public/index.html
+++ b/challenge_4/public/index.html
@@ -1,2 +1,16 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Connect 4</title>
+    <link href="styles.css" rel="stylesheet">
+  </head>
+  <body>
 
+    <div id="app">
+      
+      
+    </div>
+  </body>
+  <script src="app.js"></script>
+</html>
 
